<resources>
    <string name="app_name" translatable="false">Shizuku Next</string>
    <string name="translation_contributors" />
    <string name="home_status_service_is_running">%1$s is running</string>
    <string name="home_status_service_not_running">%1$s is not running</string>
    <string name="home_status_service_version">Version %2$s, %1$s</string>
    <string name="home_status_service_version_update"><![CDATA[Version %2$s, %1$s<br>Start again to update to version %3$s]]></string>
    <string name="home_adb_title"><![CDATA[Start by connecting to a computer]]></string>
    <string name="home_adb_description"><![CDATA[For devices without root, you need to use adb to start Shizuku (requires computer connection). This process needs to be repeated every time the device is restarted. Please <b><a href=\"%1$s\">read the help</a></b>.]]></string>
    <string name="home_adb_button_view_help">Read help</string>
    <string name="home_adb_button_view_command">View command</string>
    <string name="home_adb_dialog_view_command_message"><![CDATA[<font face="monospace">%1$s</font><br><br>* There are some other considerations, please confirm that you have read the help first.]]></string>
    <string name="home_adb_dialog_view_command_copy_button">Copy</string>
    <string name="home_adb_dialog_view_command_button_send">Send</string>
    <string name="home_wireless_adb_title"><![CDATA[Start via Wireless debugging]]></string>
    <string name="home_wireless_adb_description"><![CDATA[On Android 11 or above, you can enable Wireless debugging and start Shizuku directly from your device, without connecting to a computer.<p>Please view the step-by-step guide first.]]></string>
    <string name="home_wireless_adb_description_pre_11"><![CDATA[Before Android 11, connecting to a computer is required to enable Wireless debugging.]]></string>
    <string name="home_wireless_adb_view_guide_button">Step-by-step guide</string>
    <string name="dialog_adb_discovery">Searching for wireless debugging service</string>
    <string name="dialog_adb_discovery_message">Please enable \"Wireless debugging\" in \"Developer options\". \"Wireless debugging\" is automatically disabled when network changes.\n\nNote, do not disable \"Developer options\" or \"USB debugging\", or Shizuku will be stopped.</string>
    <string name="dialog_adb_discovery_message_toggle_wireless_debugging">Please try to disable and enable \"Wireless debugging\" if it keeps searching.</string>
    <string name="dialog_adb_port">Port</string>
    <string name="dialog_adb_invalid_port">Port is an integer ranging from 1 to 65535.</string>
    <string name="adb_pairing">Pairing</string>
    <string name="dialog_adb_pairing_title">Pair with device</string>
    <string name="dialog_adb_pairing_discovery">Searching for pairing service</string>
    <string name="dialog_adb_pairing_paring_code">Pairing code</string>
    <string name="paring_code_is_wrong">Pairing code is wrong.</string>
    <string name="cannot_connect_port">Can\'t connect to wireless debugging service.</string>
    <string name="dialog_wireless_adb_not_enabled">Wireless debugging is not enabled.\nNote, before Android 11, to enable wireless debugging, computer connection is a must.</string>
    <string name="dialog_adb_pairing_message">Please start paring by the following steps: \"Developer Options\" - \"Wireless debugging\" - \"Pairing device using pairing code\".\n\nAfter the pairing process starts, you will able to input the pairing code.</string>
    <string name="adb_pairing_requires_multi_window">Please enter split-screen (multi-window) mode first.</string>
    <string name="adb_pairing_requires_multi_window_reason">The system requires the pairing dialog always visible, using split-screen mode is the only way to let this app and system dialog visible at the same time.</string>
    <string name="adb_error_key_store">Unable to generate key for wireless debugging.\nThis may be because KeyStore mechanism of this device is broken.</string>
    <string name="adb_pair_required">Please go through the pairing step first.</string>
    <string name="development_settings">Developer options</string>
    <string name="notification_settings">Notification options</string>
    <string name="adb_pairing_tutorial_title">Pair Shizuku with your device</string>
    <string name="adb_pairing_tutorial_content_notification">A notification from Shizuku will help you complete the pairing.</string>
    <string name="adb_pairing_tutorial_content_steps">Enter \"Developer options\" - \"Wireless debugging\". Tap \"Pair device with pairing code\", you will see a six-digit code.</string>
    <string name="adb_pairing_tutorial_content_enter_pairing_code">Enter the code in the notification to complete pairing.</string>
    <string name="adb_pairing_tutorial_content_notification_blocked">The pairing process needs you to interact with a notification from Shizuku. Please allow Shizuku to post notifications.</string>
    <string name="adb_pairing_tutorial_content_miui">MIUI users may need to switch notification style to \"Android\" from \"Notification\" - \"Notification shade\" in system settings.</string>
    <string name="adb_pairing_tutorial_content_miui_2">Otherwise, you may not able to enter paring code from the notification.</string>
    <string name="adb_pairing_tutorial_content_left_is_clickable">Please note, left part of the \"Wireless debugging\" option is clickable, tapping it will open a new page. Only turing on the switch on the right is incorrect.</string>
    <string name="adb_pairing_tutorial_content_finish">Back to Shizuku and start Shizuku.</string>
    <string name="adb_pairing_tutorial_content_network">Shizuku needs to access local network. It is controlled by the network permission.</string>
    <string name="adb_pairing_tutorial_content_network_limation_not_foreground">Some systems (such as MIUI) disallow apps to access the network when they are not visible, even if the app uses foreground service as standard. Please disable battery optimization features for Shizuku on such systems.</string>
    <string name="home_root_title"><![CDATA[Start (for rooted devices)]]></string>
    <string name="home_root_description"><![CDATA[In addition, Shizuku can be started automatically on boot. If not, please check if your system or third-party tools have restricted Shizuku.<br>You can refer to %s.]]></string>
    <string name="home_root_description_sui"><![CDATA[If you are using Magisk, you can try %1$s. For root users, it will eventually replace Shizuku. Note, existing applications needs to change a little to use %2$s.]]></string>
    <string name="home_root_button_start">Start</string>
    <string name="home_root_button_restart">Restart</string>
    <string name="home_app_management_title">Application management</string>
    <plurals name="home_app_management_authorized_apps_count">
        <item quantity="one"><![CDATA[Authorized %d application]]></item>
        <item quantity="other"><![CDATA[Authorized %d applications]]></item>
    </plurals>
    <string name="home_app_management_view_authorized_apps"><![CDATA[Tap to manage authorized apps]]></string>
    <string name="home_app_management_empty">Apps that has requested or declared Shizuku will show here.</string>
    <string name="home_learn_more_title">Learn Shizuku</string>
    <string name="home_learn_more_description">Learn how to develop with Shizuku</string>
    <string name="home_adb_is_limited_title">You need to take an extra step</string>
    <string name="home_adb_is_limited_description">Your device manufacturer has restricted adb permissions and apps using Shizuku will not work properly.\n\nUsually, this limitation can be lifted by adjusting some options in \"Developer options\". Please read the help for details on how to do this.\n\nYou may need to restart Shizuku for the operation to take effect.</string>
    <string name="app_management_dialog_adb_is_limited_title">The permission of adb is limited</string>
    <string name="app_management_dialog_adb_is_limited_message"><![CDATA[It\'s highly possible that your device manufacturer limits the permission of adb.<p>There may be a solution for your system in <b><a href=\"%1$s\">this document</a></b>.]]></string>
    <string name="app_management_item_summary_requires_root">* requires Shizuku runs with root</string>
    <string name="terminal_title">终端</string>
    <string name="terminal_input_hint">输入命令…</string>
    <string name="terminal_clear">清屏</string>
    <string name="terminal_copy">复制</string>
    <string name="terminal_history">历史</string>
    <string name="terminal_copied">已复制到剪贴板</string>
    <string name="terminal_no_history">暂无命令历史</string>
    <string name="home_terminal_title">终端</string>
    <string name="home_terminal_description">在应用内直接执行 Shell 命令</string>
    <string name="home_module_title">模块</string>
    <string name="home_module_description">管理和安装扩展模块</string>
    <string name="module_list_title">模块管理</string>
    <string name="module_install">安装模块</string>
    <string name="module_empty_hint">还没有安装任何模块\n点击右下角按钮安装</string>
    <string name="module_config">配置</string>
    <string name="module_action">执行</string>
    <string name="module_uninstall">卸载</string>
    <string name="module_uninstall_title">卸载模块</string>
    <string name="module_uninstall_confirm">确定要卸载「%1$s」吗？</string>
    <string name="module_uninstalled">模块已卸载</string>
    <string name="module_install_failed">安装失败</string>
    <string name="module_no_action_script">该模块没有操作脚本</string>
    <string name="terminal_tutorial_1">First, Export files to any where you want. You will find two files, %1$s and %2$s.</string>
    <string name="terminal_tutorial_1_description">If there are files with the same name in the selected folder, they will be deleted.\n\nThe export function uses SAF (Storage Access Framework). It\'s reported that MIUI breaks the functions of SAF. If you are using MIUI, you may have to extract the file from Shizuku\'s apk or download from GitHub.</string>
    <string name="terminal_export_files">Export files</string>
    <string name="terminal_tutorial_2">Then, use any text editor to open and edit %1$s.</string>
    <string name="terminal_tutorial_2_description">For example, if you want to use Shizuku in %1$s, you should replace %2$s with %3$s (%4$s is the package name of %1$s).</string>
    <string name="terminal_tutorial_3">Finally, move the files to somewhere where your terminal app can access, you will be able to use %1$s to run commands through Shizuku.</string>
    <string name="terminal_tutorial_3_description">Some tips: grant execute permission to %1$s and add it to %2$s, you will able to use %1$s directly.</string>
    <string name="floating_pair_intro">通过悬浮窗进行无线调试配对。悬浮窗会自动搜索设备，找到后在此输入配对码即可完成配对。适用于无法弹出配对对话框的设备。</string>
    <string name="floating_pair_step1">在开发者选项中开启「无线调试」功能</string>
    <string name="floating_pair_step1b">开启无线调试后，点击「使用配对码配对设备」，生成配对码和配对端口</string>
    <string name="floating_pair_wireless_pairing_btn">打开无线配对</string>
    <string name="floating_pair_step2_overlay">在开发者选项中开启「允许在其他应用上层显示」（悬浮窗权限）</string>
    <string name="floating_pair_overlay_settings">悬浮窗权限设置</string>
    <string name="floating_pair_step3_settings_overlay">在开发者选项中勾选「允许其他设备重叠在设置上」（使悬浮窗可悬浮于设置界面之上）</string>
    <string name="floating_pair_settings_overlay_btn">打开开发者选项</string>
    <string name="floating_pair_step3">点击下方「开始配对」按钮，悬浮窗将自动搜索附近的设备</string>
    <string name="floating_pair_step4">搜索到设备后，在悬浮窗中输入配对码完成配对</string>
    <string name="floating_pair_start">开始配对</string>
    <string name="manual_connect_title">手动连接 ADB</string>
    <string name="manual_connect_description">配对已完成，但未能自动搜索到 ADB 端口。请在下方输入 ADB 的 IP 地址和端口号，然后点击连接。</string>
    <string name="manual_connect_host_hint">IP 地址</string>
    <string name="manual_connect_port_hint">端口号</string>
    <string name="manual_connect_button">连接并启动</string>
</resources>